chore: Update References
- migration guide
- code reference
- Code of Conduct
- Seucrity
- Reuse
- Temporary:- disable Sonar Cloud

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -77,7 +77,7 @@ body:
         terraform {
            required_providers {
              cloudfoundry = {
-               source = "SAP/cloudfoundry"
+               source = "cloudfoundry/cloudfoundry"
              }
           }
         }
