--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -106,20 +106,20 @@ jobs:
         with:
           name: coverage-report
           path: cover.out
-  sonarcloud:
-    if: github.event.pull_request.draft == false
-    name: SonarCloud
-    needs: test_with_terraform_versions
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - uses: actions/download-artifact@v4
-        with:
-          name: coverage-report
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  # sonarcloud:
+  #   if: github.event.pull_request.draft == false
+  #   name: SonarCloud
+  #   needs: test_with_terraform_versions
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         name: coverage-report
+  #     - name: SonarCloud Scan
+  #       uses: SonarSource/sonarcloud-github-action@master
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
