--- a/.devcontainer/withenvfile/devcontainer.json
+++ b/.devcontainer/withenvfile/devcontainer.json
@@ -26,8 +26,8 @@
 	"remoteUser": "vscode",
 	// This devcontainer expects a file named .devcontainer/devcontainer.env to exist.
 	// you should place the following environment variables in that file:
-	// - BTP_USERNAME
-	// - BTP_PASSWORD
+	// - CF_USER
+	// - CF_PASSWORD
 	"runArgs": [
 		"--env-file",
 		".devcontainer/devcontainer.env"
