Added parameters for service credential binding datasource

--- a/internal/provider/fixtures/datasource_service_credential_binding_invalid_binding.yaml
+++ b/internal/provider/fixtures/datasource_service_credential_binding_invalid_binding.yaml
@@ -6,63 +6,6 @@ interactions:
         proto: HTTP/1.1
         proto_major: 1
         proto_minor: 1
-        content_length: 73
-        transfer_encoding: []
-        trailer: {}
-        host: uaa.x.x.x.x.com
-        remote_addr: ""
-        request_uri: ""
-        body: grant_type=refresh_token&refresh_token=8b81c296bddf46e6a3dc53947ee4ad24-r
-        form:
-            grant_type:
-                - refresh_token
-            refresh_token:
-                - 8b81c296bddf46e6a3dc53947ee4ad24-r
-        headers:
-            Authorization:
-                - Basic Y2Y6
-            Content-Type:
-                - application/x-www-form-urlencoded
-        url: https://uaa.x.x.x.x.com/oauth/token
-        method: POST
-      response:
-        proto: HTTP/2.0
-        proto_major: 2
-        proto_minor: 0
-        transfer_encoding: []
-        trailer: {}
-        content_length: -1
-        uncompressed: false
-        body: '{"access_token":"redacted","token_type":"bearer","id_token":"redacted","refresh_token":"8b81c296bddf46e6a3dc53947ee4ad24-r","expires_in":1199,"scope":"cloud_controller.read password.write cloud_controller.write openid uaa.user","jti":"083cf69b56f14c9d8c58c01ad86ab69a"}'
-        headers:
-            Cache-Control:
-                - no-store
-            Content-Security-Policy:
-                - script-src 'self'
-            Content-Type:
-                - application/json;charset=UTF-8
-            Date:
-                - Fri, 19 Apr 2024 09:50:51 GMT
-            Pragma:
-                - no-cache
-            Strict-Transport-Security:
-                - max-age=31536000; includeSubDomains; preload;
-            X-Content-Type-Options:
-                - nosniff
-            X-Frame-Options:
-                - DENY
-            X-Vcap-Request-Id:
-                - 6d4925c0-2ebb-4311-7da8-f8320b513cf1
-            X-Xss-Protection:
-                - 1; mode=block
-        status: 200 OK
-        code: 200
-        duration: 214.062583ms
-    - id: 1
-      request:
-        proto: HTTP/1.1
-        proto_major: 1
-        proto_minor: 1
         content_length: 0
         transfer_encoding: []
         trailer: {}
@@ -75,8 +18,8 @@ interactions:
             Authorization:
                 - Bearer redacted
             User-Agent:
-                - Go-CF-Client/3.0
-        url: https://api.x.x.x.x.com/v3/service_credential_bindings?service_instance_guids=40b73419-5e01-4be0-baea-932d46cea45b
+                - Terraform/1.5.7 terraform-provider-cloudfoundry/dev
+        url: https://api.x.x.x.x.com/v3/service_credential_bindings?page=1&per_page=50&service_instance_guids=40b73419-5e01-4be0-baea-932d46cea45b
         method: GET
       response:
         proto: HTTP/2.0
@@ -93,17 +36,15 @@ interactions:
             Content-Type:
                 - application/json; charset=utf-8
             Date:
-                - Fri, 19 Apr 2024 09:50:52 GMT
+                - Mon, 18 Nov 2024 09:12:05 GMT
             Referrer-Policy:
                 - strict-origin-when-cross-origin
-            Server:
-                - nginx
             Strict-Transport-Security:
                 - max-age=31536000; includeSubDomains; preload;
             X-B3-Spanid:
-                - 7fad5bc89bb145b7
+                - 45a69634203b56fa
             X-B3-Traceid:
-                - 8bcff002bea347b57fad5bc89bb145b7
+                - 7323e504f1bc4dd945a69634203b56fa
             X-Content-Type-Options:
                 - nosniff
             X-Download-Options:
@@ -117,13 +58,13 @@ interactions:
             X-Ratelimit-Remaining:
                 - "18000"
             X-Ratelimit-Reset:
-                - "1713520988"
+                - "1731922388"
             X-Runtime:
-                - "0.005929"
+                - "0.006744"
             X-Vcap-Request-Id:
-                - 8bcff002-bea3-47b5-7fad-5bc89bb145b7::b81eab48-a132-4ed6-8ba9-93eb5d0791cc
+                - 7323e504-f1bc-4dd9-45a6-9634203b56fa::4e9a5ad6-d6bb-4a1c-b4b2-604ef930bfb8
             X-Xss-Protection:
                 - 1; mode=block
         status: 200 OK
         code: 200
-        duration: 189.978625ms
+        duration: 250.89475ms
